<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment"
    android:background="@drawable/gradient_list"
    android:id="@+id/mainLayout">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchHappiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:checked="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/switchOptimism"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchOptimism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:checked="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/switchKindness"
        app:layout_constraintStart_toEndOf="@+id/switchHappiness" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchKindness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:checked="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switchOptimism" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchGiving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        app:layout_constraintEnd_toStartOf="@+id/switchRespect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchRespect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        app:layout_constraintEnd_toStartOf="@+id/switchEgo"
        app:layout_constraintStart_toEndOf="@+id/switchGiving"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchEgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switchRespect"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/textViewHappiness"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/happiness"
        app:layout_constraintEnd_toEndOf="@+id/switchHappiness"
        app:layout_constraintStart_toStartOf="@+id/switchHappiness"
        app:layout_constraintTop_toBottomOf="@+id/switchHappiness" />

    <TextView
        android:id="@+id/textViewOptimism"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optimism"
        app:layout_constraintEnd_toEndOf="@+id/switchOptimism"
        app:layout_constraintStart_toStartOf="@+id/switchOptimism"
        app:layout_constraintTop_toBottomOf="@+id/switchOptimism" />

    <TextView
        android:id="@+id/textViewKindness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kindness"
        app:layout_constraintEnd_toEndOf="@+id/switchKindness"
        app:layout_constraintStart_toStartOf="@+id/switchKindness"
        app:layout_constraintTop_toBottomOf="@+id/switchKindness" />

    <TextView
        android:id="@+id/textViewHappinessFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giving"
        app:layout_constraintEnd_toEndOf="@+id/switchGiving"
        app:layout_constraintStart_toStartOf="@+id/switchGiving"
        app:layout_constraintTop_toBottomOf="@+id/switchGiving" />

    <TextView
        android:id="@+id/textViewRespect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/respect"
        app:layout_constraintEnd_toEndOf="@+id/switchRespect"
        app:layout_constraintStart_toStartOf="@+id/switchRespect"
        app:layout_constraintTop_toBottomOf="@+id/switchRespect" />

    <TextView
        android:id="@+id/textViewEgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ego"
        app:layout_constraintEnd_toEndOf="@+id/switchEgo"
        app:layout_constraintStart_toStartOf="@+id/switchEgo"
        app:layout_constraintTop_toBottomOf="@+id/switchEgo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>